[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
bson = "2.6.1"
derive_more = "0.99.17"
serde_json = "1.0.105"
anyhow = "1.0.75"
actix-cors = "0.6.4"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"] 
